# terraform-azure-agentless-scanning

./: .terraform-docs.yml  CHANGELOG.md  README.md  RELEASE_NOTES.md  checks.tf  custom_roles.tf  main.tf  output.tf  variables.tf  versions.tf
.github/workflows/: nightly.yml  terraform_docs.yml  test-compat-pr-comment.yml  test-compatibility.yml
examples/custom-vnet/: README.md  main.tf
examples/subscription-multi-region/: README.md  main.tf
examples/subscription-single-region/: README.md  main.tf
examples/tenant-multi-region/: README.md  main.tf
examples/tenant-single-region/: README.md  main.tf
preflight_check/: .coverage  .gitignore  README.md  preflight_check.py  pyproject.toml
preflight_check/preflight_check/: __main__.py  app.py  cli.py  log.py  models.py  preflight_check.py
preflight_check/preflight_check/core/: __init__.py  auth_check.py  models.py  preflight_check.py  quota_check.py
preflight_check/preflight_check/core/models/: __init__.py  auth.py  config.py  quota.py
preflight_check/preflight_check/core/services/: __init__.py  auth.py  azure.py  quota.py  subscriptions.py
preflight_check/preflight_check/helpers/: quota.py
preflight_check/preflight_check/services/: __init__.py  azure.py  subscriptions.py
preflight_check/preflight_check/tests/: conftest.py
preflight_check/preflight_check/tests/core/: test_auth_check.py
preflight_check/preflight_check/tests/core/models/: test_auth.py
scripts/: ci_tests.sh  terraform-docs.sh
service_principal/: README.md  main.tf  output.tf  variables.tf
service_principal/example/: README.md  main.tf
