[project]
name = "preflight-check"
version = "0.1.0"
description = "Preflight check for Azure Agentless Scanner deployment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.20.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-compute>=34.0.0",
    "azure-mgmt-network>=28.1.0",
    "azure-mgmt-subscription>=3.1.1",
    "msgraph-sdk>=1.22.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
preflight-check = "preflight_check.preflight_check:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.1",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # You can make this stricter over time
disallow_incomplete_defs = false  # You can make this stricter over time

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "C4", "RET", "SIM", "ARG"]
